# skills

./: CLAUDE.md  README.md
git-aliases-setup/: SKILL.md
new-aks-app/: SKILL.md
new-aks-app/templates/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
new-aks-app/templates/.claude/: CLAUDE.md
new-aks-app/templates/.github/workflows/: ci.yml  deploy.yml
new-aks-app/templates/frontend/: index.html  package.json  vitest.config.ts
new-aks-app/templates/frontend/src/: App.tsx
new-aks-app/templates/frontend/src/test/: App.test.tsx
new-aks-app/templates/k8s/: deployment.yaml  ingress.yaml  service.yaml
new-aks-app/templates/k8s-optional/: deployment-with-redis.yaml  pvc.yaml
new-aks-app/templates/webapp/: main.py
new-aks-app/templates/webapp/tests/: conftest.py  test_health.py
statusline-setup/: SKILL.md
sync-skill/: SKILL.md
